--- a/dalme_app/static/css/dalme_public/dalme_public_tei.css
+++ b/dalme_app/static/css/dalme_public/dalme_public_tei.css
@@ -59,6 +59,11 @@ tei-w[type=elision]:empty {
   margin-right: .25rem;
 }
 
+/* independent soft-wrap */
+section.transcription.soft-wrap tei-text > tei-body {
+  white-space: pre-line !important;
+}
+
 /* TEI Scholarly */
 section.transcription.scholarly {
   overflow: auto;
